<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Water Balance</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open"></string>
    <string name="drawer_close"></string>

    <string name="title">Water Balance</string>
    <string name="drinktarget">Drink Target</string>
    <string name="hotday">HotDay</string>
    <string name="workout">WorkOut</string>
    <string name="adjustHotdayWorkout">Adjust drink target for hotday and workout by clicking buttons</string>
    <string name="clickAddWater">click \'+\' to record water drunk</string>
    <string name="bodyMassIndex">Body Mass Index  :</string>
    <string name="description">Water Balance helps you to monitor your daily water intake and provides notifications to remind you to drink water.It also provides your Body Mass Index to keep a check on your weight.</string>
    <string name="benefit_tip">Benefits and Tips</string>
    <string name="tip1">Regulates Body Temperature</string>
    <string name="tip2">Relieves fatigue</string>
    <string name="tip3">Helps in Digestion and Constipation</string>
    <string name="tip4">Promotes Healthy Skin</string>
    <string name="tip5">Flushes Out Toxins</string>
    <string name="tip6">Aids Weight Loss</string>
    <string name="tip7">Oxigenates Blood and lungs</string>
    <string name="feedback_name">Name :</string>
    <string name="feedback_subject">Subject :</string>
    <string name="feedback">Feedback :</string>
    <string name="sendmail">Send Email</string>
    <string name="drinkLogDate">Date</string>
    <string name="drinkLogintaketarget">Water Intake/Target</string>
    <string name="statistics_intake">Average Daily Water Intake</string>
    <string name="statistics_target">Average Daily Drink Target</string>
    <string name="statistics_weight">Your Current Weight</string>
    <string name="statistics_range">Your Ideal Weight Range</string>
    <string name="noentry">No Entries Yet</string>
    <string name="bmiunderweight">You are Under Weight - Increase weight</string>
    <string name="bmiidealweight">Your Weight is Normal-Within Limits</string>
    <string name="bmioverweight">You are Over Weight - Reduce weight</string>
    <string name="bmiobese">Alert: You are Obese - Reduce weight</string>
    <string name="titleHome">Home</string>
    <string name="titleDrinkLog">Drink Log</string>
    <string name="titleStatistics">Statistics</string>
    <string name="titleFeedback">Feedback</string>
    <string name="titleAbout">About</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="addWaterAlertTitle">Select a Glass</string>
    <string name="weightHeightAlertTitle">Enter the Details</string>
    <string name="addWaterAlertButton">Cancel</string>
    <string name="weightHeightAlertButton">Done</string>
    <string name="kgText">kg - Kilogram</string>
    <string name="lbText">lb - Pound</string>
    <string name="cmText">cm - Centimeter</string>
    <string name="ftinText">ft-in - Foot-Inch</string>
    <string name="mlText">ML - Millilitre</string>
    <string name="unitsText">Units Convention</string>

    <string-array name="planets">
        <item>Home</item>
        <item>Drink Log</item>
        <item>Statistics</item>
        <item>About</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="planets_about">
        <item>Home</item>
        <item>Drink Log</item>
        <item>Statistics</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="planets_feedback">
        <item>Home</item>
        <item>Drink Log</item>
        <item>Statistics</item>
        <item>About</item>
    </string-array>
    <string-array name="planets_drinklog">
        <item>Home</item>
        <item>Statistics</item>
        <item>About</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="weight_dropdown">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="height_dropdown">
        <item>cm</item>
        <item>ft-in</item>
    </string-array>
    <string-array name="planets_statistics">
        <item>Home</item>
        <item>Drink Log</item>
        <item>About</item>
        <item>Feedback</item>
    </string-array>

</resources>