<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/information"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/description"
                    android:textSize="20dp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    />



                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#00B2FF" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/benefit_tip"
                    android:textColor="#00B2FF"
                    android:textSize="25dp"
                    android:textStyle="bold|italic" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#00B2FF" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/tip1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip1"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tip2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip2"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tip3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip3"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tip4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip4"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tip5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip5"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tip6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip6"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tip7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/tip7"
                    android:textSize="20dp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-condensed" >
    </ListView>

</android.support.v4.widget.DrawerLayout>