<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:paddingTop="25dp"
            android:weightSum="100" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="100" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="vertical"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/avIntakeText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:text="@string/statistics_intake"
                    android:textSize="22dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#00B2FF" />

                <TextView
                    android:id="@+id/avIntake"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="right"
                    android:text="@string/noentry"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="vertical"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/avTargetText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:text="@string/statistics_target"
                    android:textSize="22dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#00B2FF" />

                <TextView
                    android:id="@+id/avTarget"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="right"
                    android:text="@string/noentry"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="vertical"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/currentWeightText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:text="@string/statistics_weight"
                    android:textSize="22dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#00B2FF" />

                <TextView
                    android:id="@+id/currentWeight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="right"
                    android:text="@string/noentry"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:orientation="vertical"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/idealWeightText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left"
                    android:text="@string/statistics_range"
                    android:textSize="22dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#00B2FF" />

                <TextView
                    android:id="@+id/idealWeight"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="right"
                    android:text="@string/noentry"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:orientation="vertical"
                android:weightSum="100" />

            <com.inmobi.monetization.IMBanner
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:id="@+id/banner"
                android:layout_gravity="center"
                adSize="15" appId="9a37b437c9504a2190126009f07b6a67" />


        </LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#FFFFFF" >
    </ListView>

</android.support.v4.widget.DrawerLayout>